--- a/html/index.html
+++ b/html/index.html
@@ -234,6 +234,6 @@
       JAVASCRIPT LINK
       -->
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="api/server.js"></script>
+    <script src="/api/main.js"></script>
 </body>
 </html>
