--- a/html/restaurant.html
+++ b/html/restaurant.html
@@ -16,8 +16,8 @@
         </nav>
     </header>
 
-    <main class="container">
-        <article class="restaurant-details">
+    <main class="container" id="container">
+        <!-- <article class="restaurant-details">
             <div class="restaurant-cover-container">
                 <img id="restaurant-image" src="" alt="" class="restaurant-cover">
             </div>
@@ -64,9 +64,9 @@
                     </div>
                 </div>
             </div>
-        </article>
+        </article> -->
     </main>
 
-    <script src="api/server.js"></script>
+    <script src="/api/restaurant.js"></script>
 </body>
 </html>
